--- a/mod00-01/css/style.css
+++ b/mod00-01/css/style.css
@@ -33,7 +33,11 @@ h2 {
 .bio {
 
 	font-size: 14px;
-
+	margin-left: 20px;
+	margin-right: 20px;
+	border-top-style: dashed;
+	padding-top: 10px
+	
 }
 
 .ako {
@@ -42,6 +46,7 @@ h2 {
 	border-radius: 50%;
 	border-style: solid;
 	border-color: black;
+	margin-top: 20px;
 
 }
 
@@ -60,4 +65,6 @@ h2 {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
+	background-color: rgba(236, 240, 241, 0.5);
+	border-radius: 5%;
 }
