--- a/mod02-05/css/style.css
+++ b/mod02-05/css/style.css
@@ -1,3 +1,4 @@
+/* general rules */
 /*css reset*/
 * {
 	/* remove default padding and margin*/
@@ -32,3 +33,110 @@ footer {
 	text-align: center;
 	font-size: 13px;
 }
+
+form {
+	text-align: right;
+	padding: 10px 20px 20px; /* top = 10px, right=20px, bottom=20px, left=20px  */
+}
+
+main {
+	padding: 20px 10px 10px;
+
+}
+h3{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px; 
+}
+
+/* Dashboard */
+
+#postCircle, 
+#imageCircle {
+	width: 70px;
+	height: 70px;
+	background-color: red;
+	border-radius: 50%;
+	color: white;
+	text-align: center;
+	line-height: 70px;
+	float: left;
+}
+
+#postCircle {
+	background-color: #4acf50
+}
+
+#imageCircle {
+	background-color: #09c;
+}
+
+.inline-blocked {
+	display: inline-block;
+	text-align: center;
+	margin-left: 20px;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.dashColumns {
+	width: 32%;
+	height: 100px;
+	display: inline-block;
+}
+
+/* Buttons */
+
+.btn {
+	border: none;
+	padding: 15px 30px; /* 15px=top and bottom, 30px=left and right*/
+	font-size: 15px;
+	border-radius: 5px;
+	color: white;
+}
+
+.btn-blue {
+	background-color: #09c;
+
+}
+
+.btn-green { 
+	background-color: #4caf50;
+
+}
+
+
+
+/* Images */
+
+.img-set-holder {
+	text-align: center;
+}
+
+.img-set {
+	height: 100px; /* defined to maintain aspect ratio of image*/
+	/*width: 100px;*/
+	padding: 5px; /* targets all sides*/
+	background-color: #fff;
+	border-radius: 3px;
+	margin: 0 5px 
+}
+
+/* Posts */
+
+#postTitle, 
+#postContent {
+	width: 100%;
+	border-radius: 3px;
+	padding: 10px;
+}
+
+#postTitle {
+	margin-bottom: 20px;
+}
+
+#postContent {
+	height: 100px;
+	margin-bottom: 10px;
+}
+
