Deleted some large files in mod02-09

--- a/mod02-09/css/style.css
+++ b/mod02-09/css/style.css
@@ -198,7 +198,7 @@ div.content > p {
 .avatar {
 	width: 60px;
 	height: 60px;
-	background-color: #d639fe;
+	background-color: #78418E;
 	float: left;
 	border-radius: 50%;
 	margin-right: 25px;
