--- a/mod02-13/css/style.css
+++ b/mod02-13/css/style.css
@@ -98,7 +98,7 @@ div.navigation > nav > ul > a {
 */
 
 .home {
-	background-color: green;
+	
 	height: 800px;
 	background-image: url("../img/logo.jpg");
 	background-repeat: no-repeat;
@@ -131,7 +131,7 @@ div.navigation > nav > ul > a {
 */
 .about {
 	background-color: #bc4639;
-	height: 800PX;
+	/*height: 800PX;*/
 	padding: 40px;
 }
 
@@ -159,10 +159,43 @@ div.navigation > nav > ul > a {
 	padding: 20px;
 }
 
+/*.item {
+	position: relative;
+  border: 1px solid #333;
+  margin: 2%;
+  overflow: hidden;
+  width: 40%;
+  height: 80%;
+  float: left;
+}*/
+
 .aboutLogo {
-	height: 20%;
-	width: 20%;
-	background-color: white;
+	height: 40%;
+	width: 40%;
+
+	max-width: 100%;
+	
+	background-repeat: no-repeat;
+	background-size: cover;
+	float: left;
+	margin-right: 20px;
+	margin-left: 20px;
+	border-radius: 10px;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+
+}
+
+.item:hover .aboutLogo{
+	-moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.cont > p {
+	padding-bottom: 20px;
+	padding-right: 20px
 }
 
 .services {
