Update on Capstone 1

--- a/capstone1/css/style.css
+++ b/capstone1/css/style.css
@@ -11,6 +11,14 @@
 	clear: both;
 }
 
+.hide {
+  display: none;
+}
+
+/*
+* Navigation
+*/
+
 .navbar {
     min-height: 10px;
     position: relative;
@@ -73,7 +81,7 @@
 	list-style-type: none;
 }
 
-i {
+.toggleicon > i {
 /*	height: 100%;
 	width: 100%;*/
 	position: absolute;
@@ -111,19 +119,27 @@ i {
 	position: absolute;
 }
 
+
+/*
+* Main
+*/
 .wrapper {
 	background-color: grey;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	padding: 1%;
+	background-image: url('../assets/img/bg1.jpg');
+	background-size: cover;
 }
 
 .content {
 	width: 90%;
 	/*height: 100%;*/
 	border: 1px solid black;
-	margin: 0 auto;
+	margin: 30px auto;
 	padding: 1%;
+	background-color: rgba(255, 255, 255, 0.95);
+	border-radius: 2%;
 }
 
 .homeImage {
@@ -216,4 +232,185 @@ i {
 	font-family: 'Racing Sans One', cursive;
 	font-size: 130%;
 }
+
+/* Mobile Phone */
+@media only screen and (min-width: 569px){
+
+	.mobileNav {
+		display: none;
+	}
+}
+@media only screen and (max-width: 568px){
+
+	.navbar {
+		display: none;
+	}
+	.homeImage {
+		width: 100%;
+	}
+	.intro {
+		width: 100%;
+	}
+
+	.mobileNav {
+		width: 100%;
+		height: 10vh;
+		background-color: grey;
+		/*text-align: right;*/
+
+		padding: 5px;
+	}
+
+	.mobileNav > .toggle {
+		width: 8%;
+		height: 8%;
+		background-color: #4056a1;
+		text-align: center;
+		position: absolute;
+		left: 90%;
+		border-radius: 10%;
+	}
+
+	.mobileNav > .toggle > i {
+		width:100%;
+		margin: 29% auto;
+		font-size: 21px;
+	}
+}
+/*
+* Footer
+*/
+
+.footer {
+	width: 100%;
+	height: 29%;
+	position: fixed;
+	background-color: #4056a1;
+	margin: 0 auto;
+	bottom: -29%;
+	z-index: 8;
+	padding: 10px;
+}
+
+.iconFooter {
+	width: 60px;
+	height: 8%;
+	position: fixed;
+	background-color: white;
+	margin: 0 auto;
+	bottom: -5%;
+	left: 0;
+	right: 0;
+	border-radius: 100%;
+	background-color: #4056a1;
+
+}
+
+	.iconFooter > i {
+		position: absolute;
+		left: 21px;
+		right: 0;
+		margin: 5px auto;
+		font-size: 23px;
+	}
+
+.myProfile,
+.contactMe {
+	width: 50%;
+	height: 100%;
+	padding: 10px;
+	text-align: center;
+	color: white;
+
+
+}
+
+.myProfile {
+	float: left;
+}
+
+.contactMe {
+	float: right;
+	font-size: 30px;
+}
+
+	.contactMe > i {
+		padding: 10px;
+	}
+
+
+/*
+* FestivalList Page
+*/
+
+
+.dropdown {
+	width: 100%;
+	height:15vh;
+	/*border: 2px solid black;*/
+	/*padding: 20px;*/
+}
+
+.festivalList,
+.festivalList1,
+.festivalList2 {
+	width: 100%;
+	height:80%;
+	/*border: 2px solid black;*/
+	/*text-align: center;*/
+	padding: 20px;
+}
+
+.island,
+.month {
+	width: 50%;
+	text-align: center;
+	margin-top: 5%;
+
+
+}
+
+.island {
+	float: left;
+}
+
+.month {
+	float:right;
+}
+
+	.row1,
+	.row2,
+	.row3 {
+		width: 100%;
+		/*height: 150px;*/
+		/*border: 2px solid black;*/
+		margin: 1%;
+		padding: 1%;
+		text-align: center;
+	}
+
+	.row1 > ul {
+	margin-bottom: 0;
+}
+
+.row1 > ul > li {
+	display: inline-block;
+	width: 20%;
+}
+
+.row1 > ul > li > img {
+	width: 55%;
+	border-radius: 50%;
+	margin-bottom: 8%;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;	
+}
+
+.row1 > ul > li > img:hover {
+	-moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.3);
+}
+
 
